--- a/app/src/main/res/layout/activity_office.xml
+++ b/app/src/main/res/layout/activity_office.xml
@@ -3,26 +3,37 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".OfficeActivity"
-    android:gravity="center_vertical"
-    android:orientation="vertical">
+    android:gravity="bottom"
+    tools:context=".OfficeActivity">
 
     <com.huawei.hms.scene.sdk.ARView
         android:id="@+id/ar_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-    </com.huawei.hms.scene.sdk.ARView>
+        android:layout_height="match_parent"/>
 
-    <Button
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/button"
         android:layout_alignParentBottom="true"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true"
         android:layout_centerInParent="true"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:gravity="bottom"
         android:layout_marginBottom="30dp"
-        android:onClick="onButtonToggleClicked"
-        android:text="Load Object">
-    </Button>
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/button_flower"
+            android:layout_width="110dp"
+            android:layout_height="wrap_content"
+            android:onClick="onButtonFlowerToggleClicked"
+            android:text="Load Flower"/>
+
+        <Button
+            android:id="@+id/button_aquarium"
+            android:layout_width="110dp"
+            android:layout_height="wrap_content"
+            android:onClick="onButtonAquariumToggleClicked"
+            android:text="Load Aquarium"/>
+    </LinearLayout>
 </RelativeLayout>
